fixed footer alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,6 +215,11 @@ footer {
   font-size: 2rem;
 }
 
+footer {
+  align-content: flex-end;
+  max height: 10px;
+  font-size: 1rem;
+}
 @media screen and (max-width: 980px) {
   form .form-group {
     flex: 1 100%;
